Add sudoku project

--- a/locales/en.json
+++ b/locales/en.json
@@ -111,6 +111,22 @@
         ],
         "githubLink": "https://github.com/natelandrum/chat-app",
         "demoLink": "https://chat-app-sandy-phi-61.vercel.app/"
+      },
+      {
+        "id": 6,
+        "title": "Sudoku Solver",
+        "description": "Sudoku Solver using Erlang. This solver checks if a Sudoku puzzle is valid and solves it using a backtracking recursive algorithm. It also provides a web interface built with Next.js and React. Both the backend and frontend are containerized using Docker, allowing for easy deployment and scalability.",
+        "image": "https://res.cloudinary.com/dhqwefv7s/image/upload/v1744572725/sudoku-solver_p1ektk.png",
+        "technologies": [
+          "Erlang",
+          "Next.js",
+          "React",
+          "Typescript",
+          "Tailwind CSS",
+          "Docker"
+        ],
+        "githubLink": "https://github.com/natelandrum/sudoku_solver",
+        "demoLink": "https://sudokusolver-production-12d5.up.railway.app/"
       }
     ]
   },
