Add CV to the contact section

--- a/locales/en.json
+++ b/locales/en.json
@@ -194,7 +194,8 @@
     "myEmail": "nlandrum.dev@gmail.com",
     "myLocation": "Mexico City, Mexico",
     "myLinkedIn": "https://www.linkedin.com/in/nathan-landrum-dev/",
-    "myGithub": "https://github.com/natelandrum"
+    "myGithub": "https://github.com/natelandrum",
+    "myCV": "My Resume"
   },
   "footer": {
     "rights": "All rights reserved",
