--- a/locales/en.json
+++ b/locales/en.json
@@ -522,7 +522,7 @@
           ]
         },
         {
-          "title": "Inventory & Purchasing Assistant",
+          "title": "Inventory & Purchasing Specialist",
           "company": "Barnett's Repair Shop",
           "date": "2011 - 2015",
           "details": [
